@@ -1,3 +1,8 @@
+1999-03-12  Jim Kingdon  <http://www.cyclic.com>
+
+	* sanity.sh (branches): Tweak test branches-5 to test the case in
+	which one modifies a file and then branches it.
+
 1999-03-09  John Bley of duke.edu
 
 	* mkmodules.c (filelist): Missed a NULL in this struct (should
